--- a/.github/workflows/preview-pipeline.yml
+++ b/.github/workflows/preview-pipeline.yml
@@ -1,4 +1,4 @@
-name: 'LocalStack Preview'
+name: 'Creat Preview on Push'
 on:
   workflow_dispatch:
   push:
@@ -15,5 +15,10 @@ jobs:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           state-backend: ephemeral
           state-action: start
+          install-awslocal: 'true'
+          preview-cmd: |
+            awslocal bootstrap
+            awslocal deploy
+            echo LS_PREVIEW_URL=$AWS_ENDPOINT_URL/cloudfront/$distributionId/ >> $GITHUB_ENV;
         env:
           LOCALSTACK_API_KEY: ${{ secrets.LOCALSTACK_API_KEY }}
