--- a/.github/workflows/preview-pipeline.yml
+++ b/.github/workflows/preview-pipeline.yml
@@ -22,7 +22,7 @@ jobs:
           preview-cmd: |
             npm install -g aws-cdk-local aws-cdk;
             cdklocal bootstrap;
-            cdklocal deploy;
+            cdklocal deploy --require-approval never;
             echo LS_PREVIEW_URL=$AWS_ENDPOINT_URL/cloudfront/$distributionId/ >> $GITHUB_ENV;
         env:
           LOCALSTACK_API_KEY: ${{ secrets.LOCALSTACK_API_KEY }}
