Modifying the URL for ephemeral instances

--- a/.github/workflows/preview-pipeline.yml
+++ b/.github/workflows/preview-pipeline.yml
@@ -26,7 +26,7 @@ jobs:
           preview-cmd: |
             npm install -g aws-cdk-local aws-cdk;
             npm install;
-            cdklocal bootstrap;
+            cdklocal bootstrap --context localenv=ephemeral;
             cdklocal deploy --require-approval never;
             distributionId=$(awslocal cloudfront list-distributions | jq -r '.DistributionList.Items[0].Id');
             echo LS_PREVIEW_URL=$AWS_ENDPOINT_URL/cloudfront/$distributionId/ >> $GITHUB_ENV;
